wp_derive_request_builder/tests/fail/not_equals_sign.stderr
error: Did you mean '='?
 --> tests/fail/not_equals_sign.rs:5:26
  |
5 |     #[contextual_get(url : "/users", params = &UserListParams, output = Vec<SparseUser>)]
  |                          ^
